--- a/src/values.yaml
+++ b/src/values.yaml
@@ -2,7 +2,7 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 global:
-  loadbalancerURL: "http://test/abc"
+  loadbalancerURL: ""
 replicaCount: 1
 maxSurge: 1
 maxUnavailable: 0
@@ -11,7 +11,7 @@ image:
   repository: harness/ng-auth-ui-signed
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "0.41.0"
+  tag: ""
 
 nameOverride: ""
 fullnameOverride: ""
