--- a/src/values.yaml
+++ b/src/values.yaml
@@ -11,7 +11,7 @@ image:
   repository: harness/ng-auth-ui-signed
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: ""
+  tag: "0.41.0"
 
 nameOverride: ""
 fullnameOverride: ""
