refactor and v 0.2.0 bump

--- a/src/ng-auth-ui/values.yaml
+++ b/src/ng-auth-ui/values.yaml
@@ -8,10 +8,12 @@ maxSurge: 1
 maxUnavailable: 0
 
 image:
+  registry: docker.io
   repository: harness/ng-auth-ui-signed
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: "0.41.0"
+  digest: ""
 
 nameOverride: ""
 fullnameOverride: ""
@@ -70,4 +72,3 @@ nodeSelector: {}
 tolerations: []
 
 affinity: {}
-
