--- a/src/ng-auth-ui/templates/deployment.yaml
+++ b/src/ng-auth-ui/templates/deployment.yaml
@@ -31,13 +31,13 @@ spec:
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
-      {{- end }}  
+      {{- end }}
       serviceAccountName: {{ include "ng-auth-ui.serviceAccountName" . }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
       containers:
       - name: ng-auth-ui
-        image: {{ include "harnesscommon.names.imagename" . }}
+        image: {{ include "common.images.image" (dict "imageRoot" .Values.image "global" .Values.global) }}
         imagePullPolicy: {{ .Values.image.pullPolicy }}
         securityContext:
           {{- toYaml .Values.securityContext | nindent 12 }}
@@ -62,8 +62,8 @@ spec:
         - configMapRef:
             name: ng-auth-ui
         resources:
-          {{- toYaml .Values.resources | nindent 12 }}    
-      affinity: 
+          {{- toYaml .Values.resources | nindent 12 }}
+      affinity:
         podAntiAffinity:
           requiredDuringSchedulingIgnoredDuringExecution:
           - labelSelector:
