--- a/src/ng-auth-ui/templates/deployment.yaml
+++ b/src/ng-auth-ui/templates/deployment.yaml
@@ -45,15 +45,20 @@ spec:
           httpGet:
             path: /health
             port: {{.Values.service.targetport}}
-          initialDelaySeconds: 15
           periodSeconds: 10
+          failureThreshold: 5
         livenessProbe:
           httpGet:
             path: /health
             port: {{.Values.service.targetport}}
-          initialDelaySeconds: 90
-          periodSeconds: 20
-          failureThreshold: 2
+          periodSeconds: 10
+          failureThreshold: 5
+        startupProbe:
+          httpGet:
+            path: /health
+            port: {{.Values.service.targetport}}
+          periodSeconds: 10
+          failureThreshold: 25
         ports:
         - name: ng-auth-ui-port
           containerPort: {{.Values.service.targetport}}
