--- a/src/ng-auth-ui/values.yaml
+++ b/src/ng-auth-ui/values.yaml
@@ -44,6 +44,26 @@ securityContext:
   # runAsNonRoot: true
   # runAsUser: 1000
 
+probes:
+  readinessProbe:
+    httpGet:
+      path: /health
+      port: ng-auth-ui-port
+    periodSeconds: 10
+    failureThreshold: 5
+  livenessProbe:
+    httpGet:
+      path: /health
+      port: ng-auth-ui-port
+    periodSeconds: 10
+    failureThreshold: 5
+  startupProbe:
+    httpGet:
+      path: /health
+      port: ng-auth-ui-port
+    periodSeconds: 10
+    failureThreshold: 25
+
 service:
   type: ClusterIP
   protocol: TCP
